crates/pardosa-genome/tests/compile_fail/hashmap_in_btreemap.stderr
error: GenomeSafe: HashMap has non-deterministic iteration order. Use BTreeMap / BTreeSet for deterministic serialization.
 --> tests/compile_fail/hashmap_in_btreemap.rs:7:28
  |
7 |     data: BTreeMap<String, HashMap<String, u32>>,
  |                            ^^^^^^^^^^^^^^^^^^^^
